--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "heroku": "^7.65.0",
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
